--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,14 @@
 .post-topic {
     margin: 0 4px;
 }
+
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+.home {
+    display: grid;
+    align-content: space-evenly;
+    justify-items: center;
+    height: 100vh;
+}
