--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,9 +6,15 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-.home {
+.app-wrapper{
     display: grid;
-    align-content: space-evenly;
-    justify-items: center;
+    justify-content: center;
+}
+
+.home {
     height: 100vh;
+    width: 66vw;
+    display: grid;
+    align-content: space-around;
+    justify-items: center;
 }
