--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,7 +16,6 @@ body {
     width: 66vw;
     display: grid;
     align-content: space-around;
-    justify-items: stretch;
 }
 
 .logo-main, .recent-posts {
@@ -24,7 +23,15 @@ body {
     justify-items: center;
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
 $color-gray-one: #666666;
 $color-gray-two: #b3b3b3;
+$color-blue-one: #0079ff;
 
 @import "./searchbar.scss";
+@import "./recentPosts.scss";
