--- a/src/style/results.scss
+++ b/src/style/results.scss
@@ -9,8 +9,8 @@
 }
 
 .results-posts {
-    // display: grid; 
-    // grid-row-gap: 21px;
+    display: grid; 
+    grid-row-gap: 21px;
 
     .results-posts__wrapper {
         .results-posts__posts {
@@ -38,6 +38,22 @@
         line-height: 22px;
     }
     .resulte-post__links{
+        // display: flex;
+    }
+}
 
+.post-link {
+    min-height: 70px;
+    display: flex;
+
+    .post-link__box {
+        min-width: 70px;
+        background-color: $color-gray-three;
+        margin-right: 16px;
+    }
+    .post-link__link a {
+        color: $color-gray-one;
+        font-size: 14px;
+        line-height: 17px;
     }
 }
